Fix footer on mobile

--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -12,70 +12,71 @@
     padding: 5%;
 
     ul {
+      @include block-grid(4);
       list-style: none;
       margin: 0;
       padding: 0;
+      text-align: center;
     }
 
     li {
-      display: inline-block;
       padding: 10px;
-    }
-
-    
-    a {
-      // font-size: rem-calc(15);
-      // line-height: rem-calc(14);
-      // font-weight: $font-weight-light;
-      text-align: center;
-    }
-    
+    }    
 
     @media #{$medium-only} {
-      @include grid-column($columns:6);
+      @include grid-column($columns: 12);
+      ul {
+        @include block-grid(2);
+      }
     }
 
     @media #{$small-only} {
-      @include grid-column($columns:6);
+      @include grid-column($columns: 12);
+      ul {
+        @include block-grid(1);
+      }
     }
   }
 
   &__copyright {
-    @include grid-column($columns: 6);
-    padding: rem-calc(48 0 12);
-    float: right;
+    @include grid-column($columns: 12);
+    text-align: right;
+    padding: rem-calc(12 0 24);
     span {
-      float: right;
-      font-size: rem-calc(15);
-      line-height: rem-calc(25);
+      font-size: rem-calc(18);
+      //line-height: rem-calc(25);
       font-weight: $font-weight-light;
       font-family: $body-font-family;
     }
     @media #{$small-only} {
-      @include grid-column($columns:7);
+      @include grid-column($columns:12);
       padding-left: rem-calc(28);
+      text-align: center;
     }
   }
 
   .contactheader {
-    @include grid-column($columns: 6);
-    // padding: rem-calc(48 0 12);
-    width: 30%;
+    @include grid-column($columns: 3);
+    //padding: rem-calc(48 0 12);
     padding: 3%;
 
     h3 {
       display: inline-flex;
-      float: left;
+      font-size: rem-calc(28);
+    }
+    @media #{$small-only} {
+      @include grid-column($columns: 12);
+      text-align: center;
     }
   }
 
   .fa {
-    padding: 18px 9px 18px 9px;
+    padding: 18px;
     font-size: 30px;
     // width: 55px;
     // font-size: 50%;
-    width: 100%;
-    height: 100%;
+    //width: 100%;
+    //height: 100%;
     text-align: center;
     text-decoration: none;
     border-radius: 80%;
@@ -89,6 +90,7 @@
   .fa-facebook {
     background: #3B5998;
     color: white;
+    padding: 18px 23px 18px 23px;
   }
 
   .fa-twitter {
